# F1_Manager

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
F1_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  main.py
src/models/: __init__.py  car.py  driver.py  team.py  track.py
tests/: conftest.py  test_example.py
tests/models/: __init__.py  test_car.py  test_driver.py  test_team.py  test_track.py
